# weather-llm-demo

./: .env.example  .gitignore  .openrouter_api_key.example  Dockerfile  Makefile  README.md  debug_weather_page.html  docker-compose.yml  index.html  pyproject.toml
scripts/: create_html.sh  dev_uv.sh  run_uv.sh
src/weather_llm_demo/: main.py  mcp_server.py  openrouter_client.py  weather_agent.py
