[project]
name = "weather-llm-demo"
version = "1.0.0"
description = "Weather LLM Demo with MCP Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weather_llm_demo"]
